# pattern

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  README.md  build.rs  cut-names.txt  pattern.html  separated.html
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yaml  release.yaml  rust.yml
assets/: cat-atlas.psd  cat-dead.psd  dog-atlas.psd  first_level.ldtk  test.ldtk  torch-atlas.psd
assets/dialogues/: test_dialog.yarn
assets/psd/: dialogue_edge.psd  splash.psd
assets/ui/: label_gradient.psd
docs/: .gitignore  Compilation Options.md
docs/plugins/: LDtk.md  bevy_device_lang.md  bevy_ecs_ldtk.md  bevy_flurx.md  bevy_rapier2d.md  flourx.md
scripts/: Run-Debug.ps1  Run-Release.ps1  Update-Project.ps1
src/: main.rs  rapier_utils.rs  settings.rs  systems.rs
src/components/: animals.rs  animation.rs  armor.rs  camera.rs  cat.rs  cauldron.rs  chest.rs  childof.rs  climber.rs  climbing.rs  colliderbundle.rs  collision.rs  deathzone.rs  dog.rs  enemy.rs  gamemode.rs  gamepad.rs  gamestate.rs  ground.rs  grounddetection.rs  health.rs  hunger.rs  input.rs  interactions.rs  items.rs  kade.rs  ladders.rs  line_of_sight.rs  misc.rs  mod.rs  movingplatform.rs  name.rs  names.rs  npc.rs  patrol.rs  perfui.rs  player.rs  predefinedpath.rs  pumpkin.rs  pumpkins.rs  (+9 more)
src/components/ai/: mod.rs  thirst.rs
src/components/ai/actions/: drink.rs  mod.rs
src/components/ai/scorers/: mod.rs  thirsty.rs
src/components/camera/: fit_inside_current_level.rs  mod.rs
src/entities/: cat.rs  cauldron.rs  chest.rs  dog.rs  enemy.rs  intcells.rs  kade.rs  mod.rs  movingplatform.rs  npc.rs  player.rs
src/plugins/: debug.rs  easing.rs  gamestate.rs  get_backend.rs  input.rs  ldtk.rs  mod.rs
src/plugins/audio/: change_global_volume.rs  delayed_audio_source.rs  insert_audio_components.rs  insert_spatial_listener.rs  mod.rs  play_background_music.rs
src/plugins/dialogueview/: assets.rs  mod.rs  option_selection.rs  setup.rs  typewriter.rs  updating.rs
src/plugins/pathfinding/: mod.rs
src/plugins/splashscreen/: components.rs  mod.rs  resources.rs  state.rs  systems.rs
src/plugins/ui/: banner_widget.rs  bouncing.rs  flying.rs  flying_labels.rs  fps_widget.rs  fpswidget.rs  keycap.rs  keycap_demo.rs  mod.rs  release_label.rs  rotating.rs  set.rs  set_window_icon.rs  settings_widget.rs  tooltip.rs  zooming.rs
