[package]
name = "separated"
version = "1.0.0"
edition = "2021"
authors = ["Balazs Horvath", "Gaeros"]
description = "A 2D platformer game."
documentation = "https://cringe.live/docs/games/separated/"
readme = "README.md"
homepage = "https://cringe.live/separated/"
repository = "https://github.com/ka-de/separated"
license =  "MIT"
keywords = ["gamedev"]
publish = false

[lints.rust]
unsafe_code = "warn"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1

[profile.release]
codegen-units = 1

[build-dependencies]
embed-resource = "2.4.2"

[dependencies]
winit = { version = "0.29.15", default-features = false, features = ["rwh_06"] }
image = "0.25.1"
rand = "0.8.5"
unicode-segmentation = "1.11.0"
bevy_rapier2d = { version = "0.26.0", features = ["simd-stable"] }
wgpu = { version = "0.19.3", default-features = false, features = [
  "dx12",
  "metal",
  "naga",
  "naga-ir",
] }

[dependencies.bevy]
version = "0.13.2"
default-features = false
features = [
  "png",
  "vorbis",
  "animation",
  "bevy_audio",
  "bevy_gilrs",
  "bevy_gizmos",
  "bevy_sprite",
  "bevy_animation",
  "bevy_ui",
  "bevy_text",
  "subpixel_glyph_atlas",
  "bevy_render",
  "dynamic_linking",
  "multi-threaded",
  "file_watcher",
  "bevy_winit",
  "embedded_watcher",
]

[dependencies.bevy_asset_loader]
git = "https://github.com/ka-de/bevy_asset_loader"
default-features = false
features = ["2d", "standard_dynamic_assets", "progress_tracking"]

[dependencies.bevy_ecs_ldtk]
git = "https://github.com/ka-de/bevy_ecs_ldtk"

[dependencies.bevy-inspector-egui]
git = "https://github.com/ka-de/bevy-inspector-egui"

[dependencies.bevy_tweening]
git = "https://github.com/ka-de/bevy_tweening"

[dependencies.bevy_progress]
git = "https://github.com/ka-de/bevy_progress"
features = ["assets", "debug"]

[dependencies.bevy-steamworks]
git = "https://github.com/ka-de/bevy_steamworks"
features = ["serde"]

[dependencies.sickle_ui]
git = "https://github.com/ka-de/sickle_ui"
features = ["dev"]

[dependencies.bevy_yarnspinner]
git = "https://github.com/ka-de/YarnSpinner-Rust"

[dependencies.bevy_hanabi]
git = "https://github.com/ka-de/bevy_hanabi"
default-features = false
features = ["2d"]
