[package]
name = "separated"
version = "1.0.0"
edition = "2021"
authors = ["Balazs Horvath", "Gaeros"]
description = "A 2D platformer game."
documentation = "https://cringe.live/docs/games/separated/"
readme = "README.md"
homepage = "https://cringe.live/separated/"
repository = "https://github.com/ka-de/separated"
license = "MIT"
keywords = ["gamedev"]
publish = false

[lints.rust]
unsafe_code = "warn"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1

[profile.release]
codegen-units = 1
lto = "thin"

[features]
# Build release with `cargo build --release --no-default-features`
default = ["dev_features"]
dev_features = [
  "bevy/trace",
  "bevy/file_watcher",
  "bevy/embedded_watcher",
  "bevy_progress/debug",
  "bevy_rapier2d/debug-render-2d",
  "big-brain/trace",
  #"sickle_ui/dev",
  "bevy_progress/debug",
  # "bevy_incandescent/debug",
  "dep:bevy-inspector-egui",
  # Allow egui to take priority over actions when processing inputs.
  "input-manager/egui",
  "dep:bevy_mod_debugdump",
  "dep:graphviz-rust",
]

[build-dependencies]
embed-resource = "2.4.2"

[dependencies]
winit = { version = "0.29.15", default-features = false, features = ["rwh_06"] }
image = { version = "0.25.1", default-features = false, features = ["png"] }
rand = "0.8.5"
unicode-segmentation = "1.11.0"
bevy_rapier2d = { version = "0.26.0", default-features = false, features = [
  "dim2",
  "simd-stable",
  "parallel",
] }
wgpu = { version = "0.19.3", default-features = false, features = [
  "dx12",
  "metal",
  "naga",
  "naga-ir",
] }
bevy_rand = { git = "https://github.com/ka-de/bevy_rand", features = [
  #"rand_chacha",
  "wyrand",
  "serialize",
] }
input-manager = { git = "https://github.com/ka-de/input-manager" }
aery = { git = "https://github.com/ka-de/aery" }
bevy_vector_shapes = { git = "https://github.com/ka-de/bevy_vector_shapes" }
# pathfinding = { git = "https://github.com/ka-de/pathfinding" }
big-brain = { git = "https://github.com/ka-de/big-brain" }
bevy_mod_debugdump = { git = "https://github.com/ka-de/bevy_mod_debugdump", optional = true }
graphviz-rust = { version = "0.9.0", optional = true }
# bevy_text_input = { git = "https://github.com/ka-de/bevy_text_input" }
# bevy_flurx = { git = "https://github.com/ka-de/bevy_flurx" }
# bevy_magic_light_2d = { git = "https://github.com/ka-de/bevy_magic_light_2d" }
#bevy_incandescent = { git = "https://github.com/ka-de/bevy_incandescent", features = [
#  "debug",
#  "ray_marching",
#] }
bevy_mod_aseprite = { git = "https://github.com/ka-de/bevy_mod_aseprite" }

[dependencies.bevy]
version = "0.13.2"
default-features = false
features = [
  "png",
  "vorbis",
  "bevy_audio",
  "animation",
  "bevy_gilrs",           # Gamepad support
  "bevy_sprite",
  "bevy_animation",
  "bevy_ui",
  "bevy_core_pipeline",   # This sounds important, but I've only seen camera stuff in it for 2D?
  "bevy_text",
  "subpixel_glyph_atlas",
  "bevy_render",
  "multi-threaded",
  "bevy_winit",
  "x11",
  "wayland",
  # Future Stuff
  #"bevy_state",           # Needs research
  #"sysinfo_plugin",       # OwO whats this?
]

[dependencies.bevy_asset_loader]
git = "https://github.com/ka-de/bevy_asset_loader"
default-features = false
features = ["2d", "standard_dynamic_assets", "progress_tracking"]

[dependencies.bevy_ecs_ldtk]
git = "https://github.com/ka-de/bevy_ecs_ldtk"

[dependencies.bevy-inspector-egui]
git = "https://github.com/ka-de/bevy-inspector-egui"
optional = true
default-features = false
features = ["highlight_changes"]

#[dependencies.bevy_tweening]
#git = "https://github.com/ka-de/bevy_tweening"

[dependencies.bevy_progress]
git = "https://github.com/ka-de/bevy_progress"
features = ["assets"]
default-features = false

[dependencies.bevy-steamworks]
git = "https://github.com/ka-de/bevy_steamworks"
features = ["serde"]

[dependencies.sickle_ui]
git = "https://github.com/ka-de/sickle_ui"

[dependencies.bevy_yarnspinner]
git = "https://github.com/ka-de/YarnSpinner-Rust"

[dependencies.bevy_hanabi]
git = "https://github.com/ka-de/bevy_hanabi"
default-features = false
features = ["2d"]

[dependencies.rodio]
version = "0.17"
default-features = false
features = ["vorbis"]
